--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "hbs": "^4.2.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uuid": "^8.3.2"
   }
 }
